--- a/index.html
+++ b/index.html
@@ -2,131 +2,179 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Para mi amorcito lindo Cristy 🌹</title>
+<title>Para mi amorcito lindo Cristy 💖</title>
 
 <style>
 body{
     margin:0;
-    padding:0;
-    background: linear-gradient(#ffdde1, #ee9ca7);
+    height:100vh;
+    background: linear-gradient(#ff8fab,#ffc2d1);
     font-family: Arial, sans-serif;
     text-align:center;
     overflow:hidden;
 }
 
+/* estrellas */
+.estrella{
+    position:absolute;
+    color:white;
+    font-size:8px;
+    animation: brillar 2s infinite alternate;
+}
+
+@keyframes brillar{
+    from{opacity:0.3;}
+    to{opacity:1;}
+}
+
 h1{
-    margin-top:40px;
-    color:#ff4b5c;
-}
-
-#mensaje{
     margin-top:20px;
-    font-size:22px;
-    color:#333;
-    min-height:40px;
-    transition:0.5s;
+    color:white;
 }
 
-.rosas{
+#contador{
+    color:white;
+    margin-top:5px;
+}
+
+.jardin{
+    position:relative;
     margin-top:40px;
 }
 
-.rosa{
+.flor{
     font-size:60px;
+    position:absolute;
     cursor:pointer;
-    margin:15px;
-    transition: transform 0.3s;
 }
 
-.rosa:hover{
-    transform: scale(1.2);
+.flor:hover{
+    transform:scale(1.3);
+}
+
+.tarjeta{
+    position:absolute;
+    background:white;
+    padding:15px;
+    border-radius:15px;
+    box-shadow:0 4px 15px rgba(0,0,0,0.2);
+    animation: aparecer 0.5s ease;
+}
+
+@keyframes aparecer{
+    from{opacity:0; transform:scale(0.5);}
+    to{opacity:1; transform:scale(1);}
 }
 
 .corazon{
     position:absolute;
-    color:red;
-    font-size:20px;
-    animation: subir 2s linear forwards;
+    color:white;
+    animation: subir 3s linear forwards;
 }
 
 @keyframes subir{
-    0%{ transform: translateY(0); opacity:1; }
-    100%{ transform: translateY(-200px); opacity:0; }
+    from{ transform:translateY(0); opacity:1;}
+    to{ transform:translateY(-200px); opacity:0;}
 }
 
 .final{
+    color:white;
     font-size:28px;
-    color:#e63946;
     margin-top:20px;
-    animation: aparecer 2s ease-in-out;
 }
 
-@keyframes aparecer{
-    from{ opacity:0; transform:scale(0.5);}
-    to{ opacity:1; transform:scale(1);}
+button{
+    margin-top:10px;
+    padding:10px 20px;
+    border:none;
+    border-radius:10px;
+    background:#ff4b5c;
+    color:white;
+    cursor:pointer;
 }
 </style>
 </head>
 
 <body>
 
-<h1>Para mi amorcito lindo Cristy 💖</h1>
-<p>Toca una rosa para descubrir un mensaje...</p>
+<h1>Para mi amorcito lindo Cristy 💕</h1>
+<div id="contador">Tiempo pensando en ti: 0 segundos</div>
 
-<div id="mensaje"></div>
-
-<div class="rosas">
-    <span class="rosa" onclick="mostrarMensaje(0, event)">🌹</span>
-    <span class="rosa" onclick="mostrarMensaje(1, event)">🌷</span>
-    <span class="rosa" onclick="mostrarMensaje(2, event)">🌸</span>
-    <span class="rosa" onclick="mostrarMensaje(3, event)">💐</span>
+<div class="jardin">
+    <span class="flor" style="left:20%; top:50%;" onclick="mostrar(0,event)">🌹</span>
+    <span class="flor" style="left:40%; top:70%;" onclick="mostrar(1,event)">🌸</span>
+    <span class="flor" style="left:60%; top:50%;" onclick="mostrar(2,event)">🌷</span>
+    <span class="flor" style="left:80%; top:70%;" onclick="mostrar(3,event)">💐</span>
 </div>
 
-<audio id="sonido" src="https://assets.mixkit.co/sfx/preview/mixkit-romantic-flute-notification-2318.mp3"></audio>
+<button onclick="location.reload()">Reiniciar 💖</button>
 
 <script>
-const mensajes = [
-"Mi amorcito lindo Cristy, gracias por existir 💕",
-"Eres la razón de muchas de mis sonrisas 😊",
-"Contigo todo se siente más bonito 🌸",
-"Eres mi todo ❤️"
+/* estrellas */
+for(let i=0;i<40;i++){
+    const e=document.createElement("div");
+    e.classList.add("estrella");
+    e.innerText="✦";
+    e.style.left=Math.random()*window.innerWidth+"px";
+    e.style.top=Math.random()*window.innerHeight+"px";
+    document.body.appendChild(e);
+}
+
+/* contador */
+let tiempo=0;
+setInterval(()=>{
+    tiempo++;
+    document.getElementById("contador").innerText =
+    "Tiempo pensando en ti: " + tiempo + " segundos";
+},1000);
+
+const mensajes=[
+"Mi amorcito lindo Cristy, eres mi felicidad 💕",
+"Gracias por cada momento contigo 🌸",
+"Eres mi paz y mi alegría 🌷",
+"Te amo Cristy ❤️ Att: tu negrito"
 ];
 
-let contador = 0;
+let contador=0;
 
-function mostrarMensaje(index, event){
-    document.getElementById("mensaje").innerText = mensajes[index];
+function mostrar(i,event){
+    const tarjeta=document.createElement("div");
+    tarjeta.classList.add("tarjeta");
+    tarjeta.innerText=mensajes[i];
+    tarjeta.style.left=event.clientX+"px";
+    tarjeta.style.top=event.clientY+"px";
+    document.body.appendChild(tarjeta);
 
-    document.getElementById("sonido").play();
+    setTimeout(()=>tarjeta.remove(),2500);
 
-    crearCorazones(event.clientX, event.clientY);
+    corazones(event.clientX,event.clientY);
 
     contador++;
-    if(contador >= 4){
-        mostrarFinal();
+    if(contador>=4){
+        final();
     }
 }
 
-function crearCorazones(x, y){
-    for(let i=0;i<6;i++){
-        const corazon = document.createElement("div");
-        corazon.classList.add("corazon");
-        corazon.innerText = "❤️";
-        corazon.style.left = (x + Math.random()*40-20) + "px";
-        corazon.style.top = (y + Math.random()*40-20) + "px";
-        document.body.appendChild(corazon);
-
-        setTimeout(()=>corazon.remove(),2000);
+function corazones(x,y){
+    for(let i=0;i<5;i++){
+        const c=document.createElement("div");
+        c.classList.add("corazon");
+        c.innerText="❤️";
+        c.style.left=(x+Math.random()*40-20)+"px";
+        c.style.top=y+"px";
+        document.body.appendChild(c);
+        setTimeout(()=>c.remove(),3000);
     }
 }
 
-function mostrarFinal(){
-    const final = document.createElement("div");
-    final.classList.add("final");
-    final.innerText = "Te amo Cristy 💖 Att: tu negrito";
-    document.body.appendChild(final);
+function final(){
+    const f=document.createElement("div");
+    f.classList.add("final");
+    f.innerText="Para siempre tú y yo 💖";
+    document.body.appendChild(f);
 }
 </script>
 
 </body>
 </html>
+
