--- a/index.html
+++ b/index.html
@@ -2,179 +2,116 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Para mi amorcito lindo Cristy 💖</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Para Cristy ❤️</title>
 
 <style>
-body{
-    margin:0;
-    height:100vh;
-    background: linear-gradient(#ff8fab,#ffc2d1);
-    font-family: Arial, sans-serif;
-    text-align:center;
-    overflow:hidden;
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+  text-align: center;
+  color: #fff;
 }
 
-/* estrellas */
-.estrella{
-    position:absolute;
-    color:white;
-    font-size:8px;
-    animation: brillar 2s infinite alternate;
+.container {
+  padding: 20px;
 }
 
-@keyframes brillar{
-    from{opacity:0.3;}
-    to{opacity:1;}
+h1 {
+  font-size: 28px;
 }
 
-h1{
-    margin-top:20px;
-    color:white;
+.sub {
+  font-size: 18px;
+  margin-bottom: 20px;
 }
 
-#contador{
-    color:white;
-    margin-top:5px;
+.rosas {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px;
+  max-width: 300px;
+  margin: auto;
 }
 
-.jardin{
-    position:relative;
-    margin-top:40px;
+.rosa {
+  font-size: 45px;
+  cursor: pointer;
+  transition: transform 0.3s;
 }
 
-.flor{
-    font-size:60px;
-    position:absolute;
-    cursor:pointer;
+.rosa:hover {
+  transform: scale(1.2);
 }
 
-.flor:hover{
-    transform:scale(1.3);
+.mensaje {
+  margin-top: 25px;
+  font-size: 20px;
+  min-height: 60px;
+  padding: 10px;
 }
 
-.tarjeta{
-    position:absolute;
-    background:white;
-    padding:15px;
-    border-radius:15px;
-    box-shadow:0 4px 15px rgba(0,0,0,0.2);
-    animation: aparecer 0.5s ease;
+.final {
+  margin-top: 30px;
+  font-size: 22px;
+  font-weight: bold;
+  display: none;
 }
 
-@keyframes aparecer{
-    from{opacity:0; transform:scale(0.5);}
-    to{opacity:1; transform:scale(1);}
-}
-
-.corazon{
-    position:absolute;
-    color:white;
-    animation: subir 3s linear forwards;
-}
-
-@keyframes subir{
-    from{ transform:translateY(0); opacity:1;}
-    to{ transform:translateY(-200px); opacity:0;}
-}
-
-.final{
-    color:white;
-    font-size:28px;
-    margin-top:20px;
-}
-
-button{
-    margin-top:10px;
-    padding:10px 20px;
-    border:none;
-    border-radius:10px;
-    background:#ff4b5c;
-    color:white;
-    cursor:pointer;
+@media (max-width: 500px) {
+  h1 { font-size: 24px; }
+  .rosa { font-size: 40px; }
+  .mensaje { font-size: 18px; }
 }
 </style>
 </head>
 
 <body>
 
-<h1>Para mi amorcito lindo Cristy 💕</h1>
-<div id="contador">Tiempo pensando en ti: 0 segundos</div>
+<div class="container">
+  <h1>Para mi amorcito lindo Cristy ❤️</h1>
+  <div class="sub">Toca cada rosa para descubrir un mensaje</div>
 
-<div class="jardin">
-    <span class="flor" style="left:20%; top:50%;" onclick="mostrar(0,event)">🌹</span>
-    <span class="flor" style="left:40%; top:70%;" onclick="mostrar(1,event)">🌸</span>
-    <span class="flor" style="left:60%; top:50%;" onclick="mostrar(2,event)">🌷</span>
-    <span class="flor" style="left:80%; top:70%;" onclick="mostrar(3,event)">💐</span>
+  <div class="rosas">
+    <div class="rosa" onclick="mostrarMensaje()">🌹</div>
+    <div class="rosa" onclick="mostrarMensaje()">🌹</div>
+    <div class="rosa" onclick="mostrarMensaje()">🌹</div>
+    <div class="rosa" onclick="mostrarMensaje()">🌹</div>
+    <div class="rosa" onclick="mostrarMensaje()">🌹</div>
+    <div class="rosa" onclick="mostrarMensaje()">🌹</div>
+  </div>
+
+  <div class="mensaje" id="mensaje"></div>
+  <div class="final" id="final">Att: tu negrito ❤️</div>
 </div>
 
-<button onclick="location.reload()">Reiniciar 💖</button>
-
 <script>
-/* estrellas */
-for(let i=0;i<40;i++){
-    const e=document.createElement("div");
-    e.classList.add("estrella");
-    e.innerText="✦";
-    e.style.left=Math.random()*window.innerWidth+"px";
-    e.style.top=Math.random()*window.innerHeight+"px";
-    document.body.appendChild(e);
-}
-
-/* contador */
-let tiempo=0;
-setInterval(()=>{
-    tiempo++;
-    document.getElementById("contador").innerText =
-    "Tiempo pensando en ti: " + tiempo + " segundos";
-},1000);
-
-const mensajes=[
-"Mi amorcito lindo Cristy, eres mi felicidad 💕",
-"Gracias por cada momento contigo 🌸",
-"Eres mi paz y mi alegría 🌷",
-"Te amo Cristy ❤️ Att: tu negrito"
+const mensajes = [
+"Gracias por existir ❤️",
+"Eres lo mejor que me ha pasado",
+"Tu sonrisa ilumina mis días",
+"Me haces muy feliz",
+"Eres mi tranquilidad",
+"Te quiero muchísimo"
 ];
 
-let contador=0;
+let contador = 0;
 
-function mostrar(i,event){
-    const tarjeta=document.createElement("div");
-    tarjeta.classList.add("tarjeta");
-    tarjeta.innerText=mensajes[i];
-    tarjeta.style.left=event.clientX+"px";
-    tarjeta.style.top=event.clientY+"px";
-    document.body.appendChild(tarjeta);
-
-    setTimeout(()=>tarjeta.remove(),2500);
-
-    corazones(event.clientX,event.clientY);
-
+function mostrarMensaje() {
+  if (contador < mensajes.length) {
+    document.getElementById("mensaje").innerText = mensajes[contador];
     contador++;
-    if(contador>=4){
-        final();
-    }
-}
+  }
 
-function corazones(x,y){
-    for(let i=0;i<5;i++){
-        const c=document.createElement("div");
-        c.classList.add("corazon");
-        c.innerText="❤️";
-        c.style.left=(x+Math.random()*40-20)+"px";
-        c.style.top=y+"px";
-        document.body.appendChild(c);
-        setTimeout(()=>c.remove(),3000);
-    }
-}
-
-function final(){
-    const f=document.createElement("div");
-    f.classList.add("final");
-    f.innerText="Para siempre tú y yo 💖";
-    document.body.appendChild(f);
+  if (contador === mensajes.length) {
+    document.getElementById("final").style.display = "block";
+  }
 }
 </script>
 
 </body>
 </html>
 
+  
+   
