--- a/index.html
+++ b/index.html
@@ -9,12 +9,33 @@
 body{
   margin:0;
   font-family:Arial, sans-serif;
-  background:linear-gradient(135deg,#ff758c,#ff7eb3);
-  text-align:center;
+  overflow:hidden;
+  background:radial-gradient(circle at bottom,#0b0c2a,#000);
   color:white;
+  text-align:center;
 }
 
+/* Carta */
+#carta{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  background:white;
+  color:#ff4d6d;
+  padding:30px;
+  border-radius:20px;
+  cursor:pointer;
+  font-size:20px;
+  z-index:5;
+  box-shadow:0 0 20px rgba(255,255,255,0.5);
+}
+
+.hidden{display:none;}
+
 .container{
+  position:relative;
+  z-index:3;
   padding:20px;
 }
 
@@ -29,30 +50,42 @@ body{
 .rosa{
   font-size:45px;
   cursor:pointer;
+  transition:0.3s;
+}
+
+.rosa:active{
+  transform:scale(1.3);
 }
 
 .mensaje{
-  margin-top:25px;
-  font-size:20px;
+  margin-top:20px;
   min-height:60px;
 }
 
 .final{
-  margin-top:20px;
   font-weight:bold;
   font-size:22px;
   display:none;
 }
 
-.video{
-  margin-top:25px;
+canvas{
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:1;
 }
 </style>
 </head>
 
 <body>
 
-<div class="container">
+<div id="carta" onclick="abrirCarta()">
+💌 Toca para abrir mi corazón
+</div>
+
+<canvas id="canvas"></canvas>
+
+<div class="container hidden" id="contenido">
   <h1>Para mi amorcito lindo Cristy ❤️</h1>
   <p>Toca las rosas</p>
 
@@ -67,19 +100,20 @@ body{
 
   <div class="mensaje" id="mensaje"></div>
   <div class="final" id="final">Att: tu negrito ❤️</div>
-
-  <div class="video">
-    <p>Nuestra canción ❤️</p>
-    <iframe width="300" height="170"
-      src="https://www.youtube.com/embed/8q0u7j4Kk6E"
-      frameborder="0"
-      allow="autoplay; encrypted-media"
-      allowfullscreen>
-    </iframe>
-  </div>
 </div>
 
 <script>
+const canvas=document.getElementById("canvas");
+const ctx=canvas.getContext("2d");
+canvas.width=window.innerWidth;
+canvas.height=window.innerHeight;
+
+let stars=[];
+let particles=[];
+let petals=[];
+let contador=0;
+let teAmoCount=0;
+
 const mensajes=[
 "Gracias por existir ❤️",
 "Eres mi alegría diaria",
@@ -89,17 +123,101 @@ const mensajes=[
 "Eres mi todo 💕"
 ];
 
-let contador=0;
+function abrirCarta(){
+  document.getElementById("carta").classList.add("hidden");
+  document.getElementById("contenido").classList.remove("hidden");
+  iniciarAnimaciones();
+}
 
 function mostrarMensaje(){
   if(contador<mensajes.length){
     document.getElementById("mensaje").innerText=mensajes[contador];
     contador++;
   }
-
   if(contador===mensajes.length){
     document.getElementById("final").style.display="block";
+    setInterval(crearFuegoCorazon,1500);
   }
+}
+
+function iniciarAnimaciones(){
+  for(let i=0;i<100;i++){
+    stars.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height});
+  }
+  setInterval(crearPetalo,200);
+  setInterval(()=>teAmoCount++,1000);
+  animar();
+}
+
+function crearFuegoCorazon(){
+  let centerX=Math.random()*canvas.width;
+  let centerY=Math.random()*canvas.height/2;
+
+  for(let t=0;t<Math.PI*2;t+=0.2){
+    let x=16*Math.pow(Math.sin(t),3);
+    let y=-(13*Math.cos(t)-5*Math.cos(2*t)-2*Math.cos(3*t)-Math.cos(4*t));
+    particles.push({
+      x:centerX,
+      y:centerY,
+      dx:x*0.3,
+      dy:y*0.3,
+      life:100,
+      color:`hsl(${Math.random()*360},100%,60%)`
+    });
+  }
+}
+
+function crearPetalo(){
+  petals.push({
+    x:Math.random()*canvas.width,
+    y:-10,
+    speed:2+Math.random()*2
+  });
+}
+
+function animar(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  /* Estrellas */
+  ctx.fillStyle="white";
+  stars.forEach(s=>{
+    ctx.fillRect(s.x,s.y,2,2);
+  });
+
+  /* Fuegos */
+  particles.forEach((p,i)=>{
+    p.x+=p.dx;
+    p.y+=p.dy;
+    p.life--;
+    ctx.beginPath();
+    ctx.arc(p.x,p.y,2,0,Math.PI*2);
+    ctx.fillStyle=p.color;
+    ctx.fill();
+    if(p.life<=0)particles.splice(i,1);
+  });
+
+  /* Pétalos */
+  petals.forEach((p,i)=>{
+    p.y+=p.speed;
+    ctx.font="20px Arial";
+    ctx.fillText("🌸",p.x,p.y);
+    if(p.y>canvas.height)petals.splice(i,1);
+  });
+
+  /* Nombre */
+  ctx.font="40px Arial";
+  ctx.fillStyle="rgba(255,255,255,0.9)";
+  ctx.fillText("CRISTY ❤️",canvas.width/2-120,80);
+
+  /* Anillo */
+  ctx.font="35px Arial";
+  ctx.fillText("💍",canvas.width/2-15,130);
+
+  /* Contador */
+  ctx.font="20px Arial";
+  ctx.fillText("Te amo x "+teAmoCount,canvas.width/2-60,160);
+
+  requestAnimationFrame(animar);
 }
 </script>
 
