--- a/index.html
+++ b/index.html
@@ -10,170 +10,215 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
-    font-family: 'Arial', sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 body{
     background: linear-gradient(135deg, #ff9a9e, #fad0c4);
     text-align:center;
-    overflow-x:hidden;
     min-height:100vh;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    padding:20px;
+    overflow-x:hidden;
 }
 
-/* TÍTULO */
+/* CONTENEDOR */
+.container{
+    max-width:500px;
+    width:100%;
+    z-index:2;
+}
+
+/* TITULO */
 h1{
-    margin-top:30px;
-    font-size:28px;
     color:white;
-    text-shadow:2px 2px 6px rgba(0,0,0,0.3);
+    margin-bottom:10px;
+    animation:brillo 2s infinite alternate;
+}
+
+@keyframes brillo{
+    from{ text-shadow:0 0 5px white; }
+    to{ text-shadow:0 0 20px white; }
 }
 
 .sub{
-    margin-top:10px;
     color:white;
-    font-size:18px;
+    margin-bottom:25px;
 }
 
-/* CONTENEDOR DE ROSAS */
+/* ROSAS */
 .rosas{
-    display:flex;
-    justify-content:center;
-    flex-wrap:wrap;
-    margin-top:40px;
-    gap:20px;
+    display:grid;
+    grid-template-columns:repeat(3,1fr);
+    gap:15px;
+    margin-bottom:25px;
 }
 
 .rosa{
-    font-size:50px;
+    font-size:45px;
     cursor:pointer;
     transition:0.3s;
 }
 
 .rosa:hover{
-    transform:scale(1.2);
+    transform:scale(1.2) rotate(5deg);
 }
 
 /* MENSAJE */
 .mensaje{
-    margin-top:30px;
-    padding:20px;
-    max-width:90%;
-    margin-left:auto;
-    margin-right:auto;
     background:white;
-    border-radius:20px;
+    padding:18px;
+    border-radius:18px;
     box-shadow:0 5px 15px rgba(0,0,0,0.2);
-    font-size:18px;
-    min-height:60px;
+    min-height:70px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    margin-bottom:20px;
+    animation:fade 0.6s;
 }
 
-/* BOTÓN */
+@keyframes fade{
+    from{opacity:0; transform:translateY(10px);}
+    to{opacity:1; transform:translateY(0);}
+}
+
+/* BOTON */
 button{
-    margin-top:20px;
-    padding:12px 25px;
+    padding:12px 20px;
     border:none;
     border-radius:20px;
     background:#ff4b7d;
     color:white;
     font-size:16px;
     cursor:pointer;
-    transition:0.3s;
 }
 
-button:hover{
-    background:#ff1f5a;
+/* CORAZONES FONDO */
+.corazon{
+    position:fixed;
+    bottom:-20px;
+    font-size:20px;
+    animation:subir 6s linear infinite;
+    opacity:0.7;
 }
 
-/* FUEGOS ARTIFICIALES */
+@keyframes subir{
+    to{
+        transform:translateY(-110vh);
+        opacity:0;
+    }
+}
+
+/* PETALOS */
+.petalo{
+    position:fixed;
+    top:-10px;
+    font-size:18px;
+    animation:caer 8s linear infinite;
+}
+
+@keyframes caer{
+    to{
+        transform:translateY(110vh) rotate(360deg);
+    }
+}
+
+/* FUEGOS */
 .firework{
     position:fixed;
-    width:5px;
-    height:5px;
-    background:yellow;
+    width:6px;
+    height:6px;
     border-radius:50%;
     animation:explode 1s ease-out forwards;
 }
 
 @keyframes explode{
-    0%{
-        transform:scale(1);
-        opacity:1;
-    }
-    100%{
-        transform:scale(15);
-        opacity:0;
-    }
-}
-
-/* RESPONSIVE */
-@media (max-width:600px){
-    h1{
-        font-size:22px;
-    }
-    .rosa{
-        font-size:40px;
-    }
-    .mensaje{
-        font-size:16px;
-    }
+    0%{transform:scale(1);opacity:1;}
+    100%{transform:scale(14);opacity:0;}
 }
 </style>
 </head>
 
 <body>
 
+<div class="container">
 <h1>Para Mi Amorcito Lindo Cristy ❤️</h1>
-<p class="sub">Toca una rosa y mira lo que tengo para ti 🌹</p>
+<p class="sub">Toca una rosa y mira lo que siento por ti 🌹</p>
 
 <div class="rosas">
-    <div class="rosa" onclick="mostrarMensaje(0)">🌹</div>
-    <div class="rosa" onclick="mostrarMensaje(1)">🌹</div>
-    <div class="rosa" onclick="mostrarMensaje(2)">🌹</div>
-    <div class="rosa" onclick="mostrarMensaje(3)">🌹</div>
-    <div class="rosa" onclick="mostrarMensaje(4)">🌹</div>
+<div class="rosa" onclick="mostrarMensaje(0)">🌹</div>
+<div class="rosa" onclick="mostrarMensaje(1)">🌹</div>
+<div class="rosa" onclick="mostrarMensaje(2)">🌹</div>
+<div class="rosa" onclick="mostrarMensaje(3)">🌹</div>
+<div class="rosa" onclick="mostrarMensaje(4)">🌹</div>
+<div class="rosa" onclick="mostrarMensaje(5)">🌹</div>
 </div>
 
 <div class="mensaje" id="mensaje">
-    Siempre serás la flor más hermosa de mi jardín 💖
+Siempre serás la flor más hermosa de mi vida 💖
 </div>
 
-<button onclick="lanzarFuegos()">Haz que brille nuestro amor ✨</button>
+<button onclick="lanzarFuegos()">Haz brillar nuestro amor ✨</button>
+</div>
 
 <script>
-const mensajes = [
-    "Mi amorcito lindo Cristy, eres lo más hermoso que me ha pasado 💕",
-    "Tu sonrisa ilumina mis días más oscuros ☀️",
-    "Contigo quiero todo, hoy y siempre 💍",
-    "Eres mi felicidad diaria, mi paz y mi amor eterno 💖",
-    "Gracias por existir y hacer mi mundo más bonito 🌎❤️"
+const mensajes=[
+"Mi amorcito lindo Cristy, eres mi felicidad 💕",
+"Gracias por estar siempre conmigo ❤️",
+"Contigo todo es más bonito 🌹",
+"Eres mi paz y mi alegría 💖",
+"Tu amor es mi lugar favorito 🥰",
+"Siempre tú y yo ✨"
 ];
 
-function mostrarMensaje(index){
-    const mensaje = document.getElementById("mensaje");
-    mensaje.innerHTML = mensajes[index];
-    lanzarFuegos();
+function mostrarMensaje(i){
+document.getElementById("mensaje").innerHTML=mensajes[i];
+lanzarFuegos();
 }
 
+/* FUEGOS */
 function lanzarFuegos(){
-    for(let i=0; i<20; i++){
-        const fire = document.createElement("div");
-        fire.classList.add("firework");
-        fire.style.left = Math.random() * window.innerWidth + "px";
-        fire.style.top = Math.random() * window.innerHeight + "px";
-        fire.style.background = coloresRandom();
-        document.body.appendChild(fire);
-
-        setTimeout(() => {
-            fire.remove();
-        }, 1000);
-    }
+for(let i=0;i<20;i++){
+const f=document.createElement("div");
+f.className="firework";
+f.style.left=Math.random()*window.innerWidth+"px";
+f.style.top=Math.random()*window.innerHeight+"px";
+f.style.background=randomColor();
+document.body.appendChild(f);
+setTimeout(()=>f.remove(),1000);
+}
 }
 
-function coloresRandom(){
-    const colores = ["#ff0", "#ff4b7d", "#00f7ff", "#fff", "#ff8800"];
-    return colores[Math.floor(Math.random() * colores.length)];
+function randomColor(){
+const c=["#ff0","#ff4b7d","#00f7ff","#fff","#ff8800"];
+return c[Math.floor(Math.random()*c.length)];
 }
+
+/* CORAZONES */
+setInterval(()=>{
+const h=document.createElement("div");
+h.className="corazon";
+h.innerHTML="💖";
+h.style.left=Math.random()*100+"vw";
+h.style.fontSize=(15+Math.random()*20)+"px";
+document.body.appendChild(h);
+setTimeout(()=>h.remove(),6000);
+},800);
+
+/* PETALOS */
+setInterval(()=>{
+const p=document.createElement("div");
+p.className="petalo";
+p.innerHTML="🌸";
+p.style.left=Math.random()*100+"vw";
+document.body.appendChild(p);
+setTimeout(()=>p.remove(),8000);
+},900);
 </script>
 
 </body>
 </html>
+   
